# negotiation-delegation

./: .gitignore  .gitmodules  README.md  main.py  plot_by_house.sh  pyproject.toml
config/: experiments.yaml  names.yaml
src/: __init__.py
src/agents/: base_agent.py  buyer_agent.py  seller_agent.py
src/analysis/: __init__.py  compare_significance.py  plot_multiple.py  run_tests.py  statistics.py  visualization.py
src/data/: __init__.py  house_specs.py  profiles.py
src/experiments/: experiment1_mvp.py  experiment2_negotiation.py
src/models/: __init__.py  llm_client.py  providers.py
src/negotiation/: __init__.py  auction_engine.py  messages.py  negotiation_engine.py
src/utils/: combine_results.py  config_loader.py  interaction_logger.py  results_writer.py
